# julia_set_haskell

./: .gitignore  README.md  haskell.cabal
app/: Main.hs
