cabal-version:      2.4
name:               julia-set-sdl2
version:            1.0

extra-source-files: CHANGELOG.md

executable haskell
    main-is:          Main.hs

    build-depends:
        base ^>=4.16.4.0,
        sdl2 ==2.5.5.0,
        colour ==2.3.6
    hs-source-dirs:   app
    default-language: Haskell2010
